--- a/stopwatch.html
+++ b/stopwatch.html
@@ -18,13 +18,13 @@
 
   <div id="buttons">
 
-      <button onclick="stopwatch_start()">Start</button>
+      <button id="start">Start</button>
 
-      <button onclick="stopwatch_stop()">Stop</button>
+      <button id="stop">Stop</button>
 
-      <button onclick="reset()">Reset</button>
+      <button id="reset">Reset</button>
 
-      <button onclick="split()">Split</button>
+      <button id="split">Split</button>
 
    </div>
 
